# LaunchIQ

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-production.yml  deploy-staging.yml  eval-scheduled.yml  integration.yml  pr.yml
Core_Portfolio/: 01_Project_One_Pager.md  02_README_Project_Overview.md  03_Case_Study.md  04_Personal_Portfolio_Page.md  05_Role_Contribution_Summary.md  06_Presentation_Deck_Summary.md  07_Executive_Summary.md
docs/01_Product_Thinking/: 01_PRD.md  02_User_Research_Summary.md  03_Competitive_Analysis.md  04_MVP_Roadmap.md  05_GTM_Strategy.md  06_Business_Model_Canvas.md  07_Product_Document.md  08_Onboarding_Flow.md
docs/02_Technical_Feasibility/: 01_Technical_Architecture.md  02_GitHub_README.md  03_Demo_Video_Script.md  04_Tech_Stack_Decisions.md  05_Security_Compliance.md  06_End_to_End_Product_Architecture.md  07_GitHub_Repo_Structure.md  08_Implementation_Plan.md  09_Copilot_Prompts.md  09_Deployment_Guide.md
docs/03_AI_Architecture/: 01_Agent_Capability_Matrix.md  02_Data_Flow_Diagram.md  03_Agentic_AI_References_2026.md  04_Agentic_AI_Architecture.md
portfolio/: 01_Project_One_Pager.md  02_README_Project_Overview.md  03_Case_Study.md  04_Personal_Portfolio_Page.md  05_Role_Contribution_Summary.md  06_Presentation_Deck_Summary.md  07_Executive_Summary.md  08_Starstruck_Growth_Kit.md
scripts/: deploy.sh  health-check.sh  pre-deploy-check.sh
src/data/: seed.py
(+215 files in other folders)
