[tool.poetry]
name = "launchiq"
version = "0.1.0"
description = "AI-Powered Product Launch Intelligence Platform"
authors = ["Venkata Anil Kumar"]

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.45.0"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
celery = "^5.4.0"
redis = "^5.2.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
qdrant-client = "^1.13.0"
supabase = "^2.10.0"
langsmith = "^0.3.0"
langfuse = "^2.58.0"
sentry-sdk = "^2.20.0"
httpx = "^0.28.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aws-cdk-lib = "^2.190.0"
constructs = "^10.4.2"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
